basic/networkpolicies/allow-specific-namespace.yaml
# This is a sample network policy that allows incoming traffic to pods in the "workspace1" namespace only 
# from pods in the "default" namespace on port 8080.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-default
  namespace: workshop1
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - protocol: TCP
          port: 8080
