basic/networkpolicies/no-incoming-policy.yaml
# This is a sample network policy that denies all incoming traffic to pods in the "workshop" namespace.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-ingress
  namespace: workshop
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
